tests/fields/05-duplicate_field.stderr
error: field `field` already declared
 --> $DIR/05-duplicate_field.rs:7:5
  |
7 |     field: bool,
  |     ^^^^^
